# pdk-semver

./: .cruft-linters.json  .cruft.json  .editorconfig  .gitignore  .mega-linter.yml  .mypy.ini  .pkg-info.json  .pre-commit-config.yaml  .ruff.toml  .yamllint.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.ci/: check-changelog  gitlint.ini  markdownlint.jsonc  requirements.txt  venv  yamllint.yml
docs/: devel.md
src/pdk_semver/: __main__.py  scm_git.py  ver.py
tests/: test_dummy.py
