[project]
name = "pdk-semver"
dynamic = ["version"]
description = "Versioning tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anatoly Asviyan", email = "jon@dot.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]

dependencies = ["pydevkit >= 3.1.2, < 4.0.0"]


[project.scripts]
pdk-semver = "pdk_semver.__main__:main"


[project.urls]
Homepage = "https://github.com/aanatoly/pdk-semver"
Repository = "https://github.com/aanatoly/pdk-semver"

#### pdm ####
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "scm"
write_to = "pdk_semver/__version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
excludes = ["**/.*.sw*"]

[tool.cruft]
skip = ["README.md", "tests/"]

[tool.tbump]
github_url = "https://github.com/aanatoly/pdk-semver"

[tool.tbump.version]
current = "1.3.0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = ".pkg-info.json"

[[tool.tbump.before_commit]]
name = "check version in changelog"
cmd = "grep -q {new_version} CHANGELOG.md"
